# bm_serial

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bm_serial.c  bm_serial.h  bm_serial_crc.h  bm_serial_crc16.c  bm_serial_messages.h  crc.h  crc16.c  environment_ci.yml
.github/workflows/: ci.yml
test/: CMakeLists.txt  bm_serial_ut.cpp
